--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,14 @@
+--- 
 abstract: Output a Graph::Easy as Scalable Vector Graphics (SVG)
-author: Copyright (C) 2004 - 2006 by Tels L<http://bloodgate.com>
+author: Copyright (C) 2004 - 2007 by Tels L<http://bloodgate.com>
 build_requires: 
   Test::More: 0.42
 distribution_type: module
-generated_by: Module::Install version 0.64
+generated_by: Module::Install version 0.65
 license: gpl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: Graph-Easy-As_svg
 no_index: 
   directory: 
@@ -12,6 +16,6 @@ no_index:
     - inc
     - t
 requires: 
-  Graph::Easy: 0.5
-  Image::Info: 1.22
-version: 0.21
+  Graph::Easy: 0.6
+  Image::Info: 1.26
+version: 0.22
