--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,22 @@
---- 
-abstract: Output a Graph::Easy as Scalable Vector Graphics (SVG)
-author: Copyright (C) 2004 - 2007 by Tels L<http://bloodgate.com>
-build_requires: 
-  Test::More: 0.42
+---
+abstract: 'Output a Graph::Easy as Scalable Vector Graphics (SVG)'
+author:
+  - 'Copyright (C) 2004 - 2008 by Tels L<http://bloodgate.com>'
+build_requires:
+  Test::More: 0.62
 distribution_type: module
-generated_by: Module::Install version 0.65
+generated_by: 'Module::Install version 0.71'
 license: gpl
-meta-spec: 
+meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
   version: 1.3
 name: Graph-Easy-As_svg
-no_index: 
-  directory: 
+no_index:
+  directory:
     - examples
     - inc
     - t
-requires: 
-  Graph::Easy: 0.6
-  Image::Info: 1.26
-version: 0.22
+requires:
+  Graph::Easy: 0.63
+  Image::Info: 1.28
+version: 0.23
